# TMH_2026

./: .gitignore  MODEL_EXPLANATIONS.md  README.md  compare_result.py  main.py  plot_routes.py  pyproject.toml
params/: default_params.txt
results/: benchmark_summary.csv  cp_result.json  nearest_result.json  regret_result.json
results/comparison/: benchmark_summary.csv  comparison_table.txt  cp_diagnostic_grid.csv  cp_rolling_ablation.csv  cp_rolling_adaptive_10s_smoke.csv  cp_rolling_adaptive_60s.csv  cp_rolling_mandatory_ablation.csv
results/schedules/: cp_daily_schedule.csv  cp_incomplete_orders.csv  deadline_daily_schedule.csv  deadline_incomplete_orders.csv  nearest_daily_schedule.csv  nearest_incomplete_orders.csv  regret_daily_schedule.csv  regret_incomplete_orders.csv
results/schedules/cp/: daily_schedule.csv  incomplete_orders.csv  (+1 more)
src/vrp_weekly/: __init__.py  benchmark.py  cli.py  compare_results.py  config.py  core.py  cp_diagnostics.py  distance.py  evaluator.py  export.py  io.py  model_factory.py  models.py  time_utils.py
tests/: test_baseline_solvers.py  test_benchmark.py  test_cp_objective_scaling.py  test_cp_rolling_defaults.py  test_cp_rolling_improvements.py  test_cp_rolling_incomplete_diagnostics.py  test_cp_rolling_repair.py  test_distance.py  test_evaluator.py  test_heuristic_helpers.py  test_hybrid_genetic_vns.py  test_inferior_insertion.py  test_io.py  test_local_search.py  test_min_deferral.py  test_model_heuristics.py  test_new_solver_integration.py  test_regret_dispatch.py  test_solvers.py  test_time_utils.py
vrp_weekly/: __init__.py
(+105 files in other folders)
